<resources>
    <string name="app_name">My Application</string>
    <string name="btn_1">Task 1</string>
    <string name="btn_2">Task 2</string>
    <string name="btn_3">Task 3</string>
    <string name="btn_4">Task 4</string>
    <string name="btn_5">Task 5</string>
    <string name="btn_6">Task 6</string>

    <string name="btn_median">Median</string>
    <string name="btn_blur">Blur</string>
    <string name="btn_erosion">Erosion</string>
    <string name="btn_improve">Improve</string>
    <string name="btn_buildup">Buildup</string>
    <string name="btn_sobel">Sobel</string>

    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>

    <string name="original">Original</string>
    <string name="modified">Modified</string>
    <string name="img1">Image 1</string>
    <string name="img2">Image 2</string>
    <string name="result">Result</string>
    <string name="confirm">Confirm</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="a">a = %,.2f</string>

    <string name="with_watermark">With watermark</string>
    <string name="watermark_layer">Watermark layer</string>
</resources>